--- a/index.html
+++ b/index.html
@@ -1,47 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- Спасылка на внешний файл стилей -->
+    <link rel="preload" href="img/moss-stones.jpg" as="image">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <div class="sides"></div>
-    <div>
-        <img src="" alt="">
-    </div>
-    <div class="main">
-        <div><p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up now to get started</p>
-            <br>
-            <p>You know you want to.</p>
-        </div>
-        
-        <form action="#" method="post">
-            <label for="first_name">FIRST NAME</label>
-            <input type="text" id="first_name" name="first_name" required>
-
-            <label for="last_name">LAST NAME</label>
-            <input type="text" id="last_name" name="last_name" required>
-
-            <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="phone_number">PHONE NUMBER</label>
-            <input type="number" id="phone_number" name="phone_number" required>
-
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" name="password" required>
-
-            <label for="confirm_password">CONFIRM PASSWORD</label>
-            <input type="password" id="confirm_password" name="confirm_password" required>
-
-            <button>Create Account</button>
-        </form>
+    <main>
         <div>
-            <p>Alredy have an account?</p><a href="#">Log in</a>
+            <img src="img/moss-stones.jpg" alt="moss-stones green nature">
         </div>
-    </div>
-    <div class="sides"></div>
+        <div class="content">
+            <div>
+                <p>This is not a real online service! You know you need something like this in your life to help you
+                    realize your deepest dreams. Sign up now to get started</p>
+                <br>
+                <p>You know you want to.</p>
+            </div>
+            <form action="#" method="post" class="animated-form">
+                <table>
+                    <tr>
+                        <td>
+                            <label for="first_name">FIRST NAME</label>
+                            <input type="text" id="first_name" name="first_name" required>
+                        </td>
+                        <td>
+                            <label for="last_name">LAST NAME</label>
+                            <input type="text" id="last_name" name="last_name" required>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="email">EMAIL</label>
+                            <input type="email" id="email" name="email" required>
+                        </td>
+                        <td>
+                            <label for="phone_number">PHONE NUMBER</label>
+                            <input type="number" id="phone_number" name="phone_number" required>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label for="password">PASSWORD</label>
+                            <input type="password" id="password" name="password" required>
+                        </td>
+                        <td>
+                            <label for="confirm_password">CONFIRM PASSWORD</label>
+                            <input type="password" id="confirm_password" name="confirm_password" required>
+                        </td>
+                    </tr>
+                </table>
+                <button>Create Account</button>
+            </form>
+
+
+            <div>
+                <p>Already have an account?</p><a href="#">Log in</a>
+            </div>
+        </div>
+    </main>
+    <script src="main.js"></script>
 </body>
+
 </html>
