add css animation

--- a/index.html
+++ b/index.html
@@ -17,51 +17,69 @@
             <img src="img/moss-stones.jpg" alt="moss-stones green nature">
         </div>
         <div class="content">
-            <div>
+            <div class="text">
                 <p>This is not a real online service! You know you need something like this in your life to help you
-                    realize your deepest dreams. Sign up now to get started</p>
-                <br>
-                <p>You know you want to.</p>
+                    realize your deepest dreams. Sign up now to get started
+                    <br>
+                    You know you want to.
+                </p>
             </div>
-            <form action="#" method="post" class="animated-form">
+            <form action="#" method="post">
                 <table>
                     <tr>
                         <td>
-                            <label for="first_name">FIRST NAME</label>
-                            <input type="text" id="first_name" name="first_name" required>
+                            <div class="form-group">
+                                <input type="text" id="first_name" name="first_name" required>
+                                <label for="first_name">FIRST NAME</label>
+                            </div>
                         </td>
                         <td>
-                            <label for="last_name">LAST NAME</label>
-                            <input type="text" id="last_name" name="last_name" required>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <label for="email">EMAIL</label>
-                            <input type="email" id="email" name="email" required>
-                        </td>
-                        <td>
-                            <label for="phone_number">PHONE NUMBER</label>
-                            <input type="number" id="phone_number" name="phone_number" required>
+                            <div class="form-group">
+                                <input type="text" id="last_name" name="last_name" required>
+                                <label for="last_name">LAST NAME</label>
+                            </div>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <label for="password">PASSWORD</label>
-                            <input type="password" id="password" name="password" required>
+                            <div class="form-group">
+                                <input type="email" id="email" name="email" required>
+                                <label for="email">EMAIL</label>
+                            </div>
                         </td>
                         <td>
-                            <label for="confirm_password">CONFIRM PASSWORD</label>
-                            <input type="password" id="confirm_password" name="confirm_password" required>
+                            <div class="form-group">
+                                <input type="number" id="phone_number" name="phone_number" required>
+                                <label for="phone_number">PHONE NUMBER</label>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="form-group">
+                                <input type="password" id="password" name="password" required>
+                                <label for="password">PASSWORD</label>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <input type="password" id="confirm_password" name="confirm_password" required>
+                                <label for="confirm_password">CONFIRM PASSWORD</label>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <button>Create Account</button>
                         </td>
                     </tr>
                 </table>
-                <button>Create Account</button>
             </form>
 
 
-            <div>
-                <p>Already have an account?</p><a href="#">Log in</a>
+            <div class=" footer">
+                <p>Already have an account? <a href="https://media.giphy.com/media/GeimqsH0TLDt4tScGw/giphy.gif">Log
+                        In</a></p>
             </div>
         </div>
     </main>
