--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <main>
         <div class="img-container">
             <img class="img-body" src="img/moss-stones.jpg" alt="moss-stones green nature">
-            
         </div>
         <div class="content">
             <div class="text">
@@ -50,7 +49,7 @@
                         </td>
                         <td>
                             <div class="form-group">
-                                <input type="number" id="phone_number" name="phone_number" required>
+                                <input type="text" id="phone_number" name="phone_number" required>
                                 <label for="phone_number">PHONE NUMBER</label>
                             </div>
                         </td>
